# raspberry-pico-windows-development

./: .gitignore  README.md  setup_env.sh
Scripts/: adminCheck.bat  path.bat  refreshPath.sh
sample/: CMakeLists.txt
